# scenematica-editor

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  changelog.md  todo.md
src/: EditorLayer.cpp  EditorLayer.h  ScenematicEditor.cpp
src/Core/: CameraControllercpp  CameraControllerh  Components.cpp  Components.h  Plugins.h
src/UI/Menus/: LevelEditor.cpp  LevelEditor.h  LevelList.cpp  LevelList.h  MainMenu.cpp  MainMenu.h  MenuBase.h
src/UI/Panels/: ContentBrowser.cpp  ContentBrowser.h  ElementHierarchyPanel.cpp  ElementHierarchyPanel.h  ElementProperties.cpp  ElementProperties.h
